--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.2",
+    "date-fns": "^4.1.0",
     "idb": "^8.0.3",
     "localforage": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "uuid": "^11.1.0"
   },
